--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,15 @@
-<p>admin works!</p>
+<div class="container" style="margin: 50px;">
+  <div class="row" style="text-align: center;">
+      <h2 style="margin-left: 450px;">!!! WELCOME ADMIN !!!</h2><br><br>
+      </div><br><br>
+      <form  style="margin-left: 50px; margin-right: 50px;" >
+
+              <div class="form-group" >
+                <label for="exampleFormControlInput1"><h5>ENTER YOUR PASSWORD :</h5> </label><br>
+                <input type="password" class="form-control" ngModel name="cname" required minlength="6" />
+              </div>
+              <br><button class="btn btn-warning " style="margin-left: 450px;"  type="submit">SUBMIT</button>
+
+      </form>
+
+</div>
