--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,24 @@
-<p>auth works!</p>
+<html>
+    <body>
+        <form>
+            <div class="bg">
+              <div class="container-fluid"><br>
+                <h3 class="b4">LOGIN</h3>
+                <div class="form-group"><br>
+                    <div class="group1">
+                        <i class="fa fa-envelope icon"></i>
+                        <input class="input-field" type="text" placeholder="Enter your UserID" name="uname" required><br><br>
+                    </div>
+
+                    <div class="group1">
+                        <i class="fa fa-key icon"></i>
+                        <input class="input-field" type="password" placeholder="Enter Password" name="upass" required><br><br>
+                    </div>
+
+                    <button type="submit" class="btn btn-success"><b>LOGIN</b></button><br><br>
+                </div>
+              </div>
+          </div>
+        </form>
+    </body>
+</html>
