--- a/src/app/dryfruits/dates/dates.component.html
+++ b/src/app/dryfruits/dates/dates.component.html
@@ -28,11 +28,7 @@
                         <img class="card-img-top" src="assets/image/pulses/dates.jpg" alt="Card image" style="width:100%" >
                         <div class="card-body">
                             <h6 class="card-title">&nbsp;&nbsp;&nbsp;DATES</h6>
-                            <!--
-                            <button class="btn btn-primary">BUY</button> &nbsp;
 
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <button class="btn btn-primary">ADD TO CART</button>-->
                         </div>
                     </div> <br>
                 </div>
@@ -55,22 +51,9 @@
                         <td>250 GRAMS</td>
                         <td>150</td>
 
-                        <td><button class="btn btn-primary" >ADD TO CART</button></td>
+                        <td><button class="btn btn-primary" (click)="addToCart('124')">ADD TO CART</button></td>
                     </tr>
-                    <!--<th>IN STOCK</th><td>10</td>(click)="addToCart('124')"
-                    <tr class="info">
-                        <td>500 GRAMS</td>
-                        <td>100</td>
-                        <td>10</td>
-                        <td><button class="btn btn-primary">BUY </button></td>
-                    </tr>
-                    <tr class="info">
-                        <td>1 KG</td>
-                        <td>200</td>
-                        <td>10</td>
-                        <td><button class="btn btn-primary">BUY </button></td>
-                    </tr>
-                    -->
+
                     </tbody>
                 </table>
             </div>
