--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,7 +39,11 @@
     </li>
 
     <li class="nav-item active">
-      <a class="nav-link" routerLink="/auth" style="font-weight: bolder;">AUTHENTICATION</a>
+      <a class="nav-link" routerLink="/herbal" style="font-weight: bolder;">HERBALS</a>
+    </li>
+
+    <li class="nav-item active">
+      <a class="nav-link" routerLink="/auth" style="font-weight: bolder;">LOGIN</a>
     </li>
 
     <li class="nav-item active">
@@ -47,13 +51,13 @@
     </li>
 
     <li class="nav-item active" >
-      <a class="nav-link" routerLink="/cart" style="font-weight: bolder;">CART</a>
+      <a class="nav-link" routerLink="/order" style="font-weight: bolder;">ORDER</a>
     </li>
-<!--
+
     <li class="nav-item active" >
       <a class="nav-link" routerLink="/admin" style="font-weight: bolder;">ADMIN</a>
     </li>
-
+<!--
     <li class="nav-item active">
       <a class="nav-link" routerLink="/admindetails" style="font-weight: bolder;">ADMINDETAILS</a>
     </li>
@@ -68,12 +72,6 @@
       <a>LOGOUT</a>
     </li>
   </ul>
-  <!--
-  <form class="form-inline" action="">
-    <input class="form-control mr-sm-2" type="search" placeholder="SEARCH" >
-    <button class="btn btn-success my-2" type="submit">SEARCH</button>
-  </form>
-  -->
 </nav>
 
 </div>
