--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,6 @@
 .navbar-custom {
-  background-color:rgb(229, 226, 226);
+  //background-color:rgb(229, 226, 226);
+  background-color:#f6f6f6;
   color: black;
 }
 
