--- a/src/app/siddha/abayaristam/abayaristam.component.html
+++ b/src/app/siddha/abayaristam/abayaristam.component.html
@@ -46,27 +46,10 @@
                     </tr>
                     </thead>
                     <tbody>
-                      <!--
-                        <th>IN STOCK</th>
-                        <td>10</td>
-                    <tr class="info">
-                        <td>250 GRAMS</td>
-                        <td>50</td>
-                        <td>10</td>
-                        <td><button class="btn btn-primary">BUY </button></td>
-                    </tr>
-                    <tr class="info">
-                        <td>500 GRAMS</td>
-                        <td>100</td>
-                        <td>10</td>
-                        <td><button class="btn btn-primary">BUY </button></td>
-                    </tr>(click)="addToCart('101')"
-                    -->
                     <tr class="info">
                         <td>1 KG</td>
                         <td>400</td>
-
-                        <td><button class="btn btn-primary" >ADD TO CART </button></td>
+                        <td><button class="btn btn-primary" (click)="addToCart('101')">ADD TO CART </button></td>
                     </tr>
                     </tbody>
                 </table>
