--- a/src/app/ayurvedha/vallarai/vallarai.component.html
+++ b/src/app/ayurvedha/vallarai/vallarai.component.html
@@ -28,9 +28,6 @@
                         <img class="card-img-top" src="assets/image/ayurvedha/vallarai.jpg" alt="Card image" style="width:100%" >
                         <div class="card-body">
                             <h6 class="card-title">&nbsp;&nbsp;&nbsp;VALLARAI TABLET</h6>
-                            <!--
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <button class="btn btn-primary">ADD TO CART</button>-->
                         </div>
                     </div> <br>
                 </div>
@@ -53,22 +50,8 @@
                         <td>250 GRAMS</td>
                         <td>50</td>
 
-                        <td><button class="btn btn-primary" >ADD TO CART </button></td>
+                        <td><button class="btn btn-primary" (click)="addToCart('117')" >ADD TO CART </button></td>
                     </tr>
-                    <!--<th>IN STOCK</th><td>10</td>(click)="addToCart('117')"
-                    <tr class="info">
-                        <td>500 GRAMS</td>
-                        <td>100</td>
-                        <td>10</td>
-                        <td><button class="btn btn-primary">BUY </button></td>
-                    </tr>
-                    <tr class="info">
-                        <td>1 KG</td>
-                        <td>200</td>
-                        <td>10</td>
-                        <td><button class="btn btn-primary">BUY </button></td>
-                    </tr>
-                    -->
                     </tbody>
                 </table>
             </div>
