--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,15 +20,6 @@
           <img src="assets/image/carousel/img3.jpg" alt="Img4" style="width: 100%; height:400px;">
       </div>
 
-      <!--
-      <div class="carousel-item">
-          <img src="assets/image/carousel/img4.jpg" alt="Img5" style="width: 100%; height:400px;">
-      </div>
-
-      <div class="carousel-item">
-          <img src="assets/image/carousel/img5.jpg" alt="Img5" style="width: 100%; height:400px;">
-      </div>
-      -->
   </div>
   <a class="carousel-control-prev" href="#demo" data-slide="prev">
       <span class="carousel-control-prev-icon"></span>
@@ -90,7 +81,7 @@
             <div class="card-body">
               <h5 class="card-title">HERBAL POWDERS</h5>
               <p class="card-text">HERBAL POWDERS</p>
-              <button class="btn btn-success">VIEW PRODUCTS</button>
+              <button class="btn btn-success" routerLink="/herbal" routerLinkActive="active">VIEW PRODUCTS</button>
             </div>
           </div>
       </div>
@@ -98,61 +89,4 @@
 
 </div>
 
-<br><br>
-
-<div class="row">
-
-  <div class="col sm-4" style="margin-left: 10px;">
-      <div class="container">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="assets/image/domains/siddha5.jpg" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">SIDDHA</h4>
-              <p class="card-text">SIDDHA PRODUCTS</p>
-              <button class="btn btn-success">VIEW PRODUCTS</button>
-            </div>
-          </div>
-      </div>
-  </div>
-
-  <div class="col sm-4" style="margin-left: 10px;">
-      <div class="container">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="assets/image/domains/siddha5.jpg" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h4 class="card-title">AYURVEDHA</h4>
-              <p class="card-text">AYURVEDHA PRODUCTS</p>
-              <button class="btn btn-success">VIEW PRODUCTS</button>
-            </div>
-          </div>
-      </div>
-  </div>
-
-  <div class="col sm-4" style="margin-left: 10px;">
-      <div class="container">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="assets/image/domains/siddha5.jpg" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h5 class="card-title">PULSES AND MILLETS</h5>
-              <p class="card-text">PULSES AND MILLETS</p>
-              <button class="btn btn-success">VIEW PRODUCTS</button>
-            </div>
-          </div>
-      </div>
-  </div>
-
-  <div class="col sm-4" style="margin-left: 10px;">
-      <div class="container">
-          <div class="card" style="width:250px">
-            <img class="card-img-top" src="assets/image/domains/siddha5.jpg" alt="Card image" style="width:100%">
-            <div class="card-body">
-              <h5 class="card-title">HERBAL POWDERS</h5>
-              <p class="card-text">HERBAL POWDERS</p>
-              <button class="btn btn-success">VIEW PRODUCTS</button>
-            </div>
-          </div>
-      </div>
-  </div>
-
-</div>
 <br><br>
