--- a/src/app/siddha/ashokarishta/ashokarishta.component.html
+++ b/src/app/siddha/ashokarishta/ashokarishta.component.html
@@ -28,10 +28,7 @@
                         <img class="card-img-top" src="assets/image/siddha/dabur_ashokarishta_syrup_450_ml_0.jpg" alt="Card image" style="width:100%" >
                         <div class="card-body">
                             <h6 class="card-title">&nbsp;&nbsp;&nbsp;ASHOKARISHTA</h6>
-                            <!--
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <button class="btn btn-primary" >ADD TO CART</button>
-                            -->
+
                         </div>
                     </div> <br>
                 </div>
@@ -51,28 +48,12 @@
                     </tr>
                     </thead>
                     <tbody>
-                      <!--
-                        <th>IN STOCK</th>
-                        <td>10</td>
-                    <tr class="info">
-                        <td>250 GRAMS</td>
-                        <td id="ask250" value="50">50</td>
-                        <td>10</td>
-                        <td><button type="submit" class="btn btn-primary">BUY </button></td>
-                    </tr>
 
-                    <tr class="info">
-                        <td>500 GRAMS</td>
-                        <td>100</td>
-                        <td>10</td>
-                        <td><button class="btn btn-primary" >BUY </button></td>
-                    </tr>(click)="addToCart('102')"
-                    -->
                     <tr class="info">
                         <td>1 KG</td>
                         <td>200</td>
 
-                        <td><button class="btn btn-primary" >ADD TO CART </button></td>
+                        <td><button class="btn btn-primary" (click)="addToCart('102')">ADD TO CART </button></td>
                     </tr>
                     </tbody>
                 </table>
