--- a/src/app/siddha/dashamuulaarishttam/dashamuulaarishttam.component.html
+++ b/src/app/siddha/dashamuulaarishttam/dashamuulaarishttam.component.html
@@ -28,12 +28,7 @@
                         <img class="card-img-top" src="assets/image/siddha/dashamuulaarishttamfront_300x300.webp" alt="Card image" style="width:100%" >
                         <div class="card-body">
                             <h6 class="card-title">&nbsp;&nbsp;DASHAMUULAARISHTTAM</h6>
-                            <!--
-                            <button class="btn btn-primary">BUY</button> &nbsp;
 
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <button class="btn btn-primary">ADD TO CART</button>
-                             -->
                         </div>
                     </div> <br>
                 </div>
@@ -53,27 +48,12 @@
                     </tr>
                     </thead>
                     <tbody>
-                      <!--
-                        <th>IN STOCK</th>
-                        <td>10</td>
-                    <tr class="info">
-                        <td>250 GRAMS</td>
-                        <td>50</td>
-                        <td>10</td>
-                        <td><button class="btn btn-primary">BUY </button></td>
-                    </tr>
-                    <tr class="info">
-                        <td>500 GRAMS</td>
-                        <td>100</td>
-                        <td>10</td>
-                        <td><button class="btn btn-primary">BUY </button></td>
-                    </tr>(click)="addToCart('104')"
-                    -->
+
                     <tr class="info">
                         <td>1 KG</td>
                         <td>200</td>
 
-                        <td><button class="btn btn-primary" >ADD TO CART</button></td>
+                        <td><button class="btn btn-primary" (click)="addToCart('104')">ADD TO CART</button></td>
                     </tr>
                     </tbody>
                 </table>
